Fixed dark mode image inversion problem

--- a/style/components.css
+++ b/style/components.css
@@ -8,8 +8,12 @@
 
 @media (prefers-color-scheme: dark) {
     html {
-        filter: invert(0.9) hue-rotate(180deg) !important;
-        -webkit-filter: invert(0.9) hue-rotate(180deg) !important;
+        filter: invert(0.9);
+        -webkit-filter: invert(0.9);
+    }
+    img {
+        filter: invert(1) !important;
+        -webkit-filter: invert(1) !important;
     }
 }
 
